# lllm

./: 404.html  CNAME  README.md  index.html  lllm.toml.example  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml
advanced/neuro-symbolic/: index.html
advanced/program-synthesis/: index.html
architecture/overview/: index.html
core/agent-call/: index.html
core/agents/: index.html
core/discovery/: index.html
core/logging/: index.html
core/prompts/: index.html
core/providers/: index.html
core/proxy-and-sandbox/: index.html
docs/: getting-started.md  index.md
docs/advanced/: neuro-symbolic.md  program-synthesis.md
docs/architecture/: overview.md
docs/core/: agent-call.md  agents.md  discovery.md  logging.md  prompts.md  providers.md  proxy-and-sandbox.md
docs/guides/: building-agents.md  project-template.md
docs/reference/: core.md  modules.md  providers.md  proxies.md
examples/: basic_chat.py  builtin_proxies_example.py  jupyter_sandbox_smoke.py  proxy_catalog.py  tool_use.py
getting-started/: index.html
guides/building-agents/: index.html
guides/project-template/: index.html
lllm/: README.md  __init__.py  cli.py  config.py  const.py  discovery.py  llm.py  log.py  models.py  proxies.py  sandbox.py  utils.py
lllm/core/: __init__.py  agent.py  const.py  dialog.py  discovery.py  log.py  models.py  models.toml
lllm/providers/: __init__.py  base.py  openai.py
search/: search_index.json
template/: default.yaml  lllm.toml  system.py  utils.py
tests/: __init__.py  conftest.py
(+93 files in other folders)
